--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "js-cookie": "^2.1.4",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "node-less": "^1.0.0",
