--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "vue": "^2.3.3",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "js-cookie": "^2.1.4",
+    "polyfills": "^2.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -28,7 +30,6 @@
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.3",
-    "element-ui": "^1.3.6",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^2.0.7",
@@ -44,14 +45,12 @@
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "js-cookie": "^2.1.4",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "node-less": "^1.0.0",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.2.0",
-    "polyfills": "^2.1.1",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
