--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "vue": "^2.3.3",
-    "vue-router": "^2.3.1",
+    "css-loader": "^0.28.4",
     "js-cookie": "^2.1.4",
-    "polyfills": "^2.1.1"
+    "polyfills": "^2.1.1",
+    "vue": "^2.3.3",
+    "vue-router": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
