--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "css-loader": "^0.28.4",
     "js-cookie": "^2.1.4",
     "polyfills": "^2.1.1",
