--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^2.1.4",
     "polyfills": "^2.1.1",
     "vue": "^2.3.3",
+    "vue-cropper": "^0.2.9",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
